[gd_scene load_steps=23 format=3 uid="uid://c6pevrn0xm7sx"]

[ext_resource type="Script" path="res://hud.gd" id="1_i8n1y"]
[ext_resource type="Texture2D" uid="uid://dcciqmeng46cd" path="res://Tilesets/16x16_weapons.png" id="1_meccu"]
[ext_resource type="Texture2D" uid="uid://6twyxm2a5xg8" path="res://Tilesets/farming set opengameart/Iron Axe.png" id="2_w2g36"]
[ext_resource type="ButtonGroup" uid="uid://biasxtwsmidre" path="res://Themes/HUDButtons.tres" id="3_hc5ra"]
[ext_resource type="FontFile" uid="uid://rckw2fcskq38" path="res://Themes/dum1/dum1.ttf" id="4_4d21l"]
[ext_resource type="Texture2D" uid="uid://b2oda45557ucm" path="res://Tilesets/puch_preview.png" id="4_42hfy"]
[ext_resource type="Texture2D" uid="uid://b1js1ab808iv4" path="res://crops/crops/crops.png" id="6_id7he"]
[ext_resource type="Theme" uid="uid://ddp15p7yvcdpl" path="res://Themes/messedup.tres" id="8_gwou0"]
[ext_resource type="Texture2D" uid="uid://cpxx7c288kiaa" path="res://Tilesets/UI_ELEMENTS/previews/dialog_box.png" id="9_pptkm"]
[ext_resource type="Texture2D" uid="uid://72vqjie60mcf" path="res://Tilesets/UI_ELEMENTS/menu_2_2_2.png" id="10_l53qb"]

[sub_resource type="InputEventKey" id="InputEventKey_qn46d"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_1aj4l"]
events = [SubResource("InputEventKey_qn46d")]

[sub_resource type="AtlasTexture" id="AtlasTexture_o4fvf"]
atlas = ExtResource("1_meccu")
region = Rect2(35, 16, 13, 16)

[sub_resource type="InputEventKey" id="InputEventKey_b576q"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_njyog"]
events = [SubResource("InputEventKey_b576q")]

[sub_resource type="AtlasTexture" id="AtlasTexture_8txwe"]
atlas = ExtResource("2_w2g36")
region = Rect2(0, 0, 27, 32)

[sub_resource type="InputEventKey" id="InputEventKey_g4uuj"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_0l5b0"]
events = [SubResource("InputEventKey_g4uuj")]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6wu6"]
atlas = ExtResource("1_meccu")
region = Rect2(50, 18, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hoia"]
atlas = ExtResource("4_42hfy")
region = Rect2(199, 1717, 573, 576)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0yug"]
atlas = ExtResource("6_id7he")
region = Rect2(7, 7, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrmcy"]
atlas = ExtResource("6_id7he")
region = Rect2(200, 0, 16, 32)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -420.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_i8n1y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = 344.0
offset_right = 197.0
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 0

[node name="Hoe" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Used to till soil."
focus_mode = 0
theme_override_fonts/font = ExtResource("4_4d21l")
toggle_mode = true
button_group = ExtResource("3_hc5ra")
shortcut = SubResource("Shortcut_1aj4l")
shortcut_feedback = false
text = "Farming Hoe"
icon = SubResource("AtlasTexture_o4fvf")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Axe" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Use for chopping trees."
focus_mode = 0
theme_override_fonts/font = ExtResource("4_4d21l")
toggle_mode = true
button_group = ExtResource("3_hc5ra")
shortcut = SubResource("Shortcut_njyog")
shortcut_feedback = false
text = "Lumber Axe"
icon = SubResource("AtlasTexture_8txwe")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Pickaxe" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Used to break rocks and ores."
focus_mode = 0
theme_override_fonts/font = ExtResource("4_4d21l")
toggle_mode = true
button_group = ExtResource("3_hc5ra")
shortcut = SubResource("Shortcut_0l5b0")
shortcut_feedback = false
text = "Pickaxe"
icon = SubResource("AtlasTexture_l6wu6")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Seeds" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = 160.0
offset_right = 245.0
offset_bottom = 744.0
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("4_4d21l")
theme_override_font_sizes/font_size = 150
toggle_mode = true
action_mode = 0
text = "Seeds"
icon = SubResource("AtlasTexture_6hoia")
icon_alignment = 1

[node name="SeedContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = -272.0
offset_top = 160.0
offset_right = -192.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="Potatoes" type="Button" parent="SeedContainer"]
layout_mode = 2
tooltip_text = "Used to till soil."
focus_mode = 0
theme_override_fonts/font = ExtResource("4_4d21l")
toggle_mode = true
button_group = ExtResource("3_hc5ra")
shortcut = SubResource("Shortcut_1aj4l")
shortcut_feedback = false
text = "Potatoes"
icon = SubResource("AtlasTexture_y0yug")
alignment = 0
expand_icon = true

[node name="Carrots" type="Button" parent="SeedContainer"]
layout_mode = 2
tooltip_text = "Use for chopping trees."
focus_mode = 0
theme_override_fonts/font = ExtResource("4_4d21l")
toggle_mode = true
button_group = ExtResource("3_hc5ra")
shortcut = SubResource("Shortcut_njyog")
shortcut_feedback = false
text = "Carrots"
icon = SubResource("AtlasTexture_vrmcy")
alignment = 0
expand_icon = true

[node name="AdvanceDay" type="Window" parent="."]
title = "Confirmation"
initial_position = 4
size = Vector2i(400, 200)
visible = false
unresizable = true
theme = ExtResource("8_gwou0")

[node name="Yes" type="Button" parent="AdvanceDay"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 90.0
offset_top = 20.0
offset_right = 145.0
offset_bottom = 60.0
grow_vertical = 2
text = "Yes"

[node name="No" type="Button" parent="AdvanceDay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = 20.0
offset_right = 115.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "No"

[node name="Label" type="Label" parent="AdvanceDay"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 318.0
grow_horizontal = 2
text = "Ready to advance to the next day?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -32.0
offset_right = 96.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_pptkm")

[node name="Label" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = -13.0
offset_right = 126.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "That was relaxing.  Back to work!
Day:"

[node name="DayCounter" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 234.0
offset_top = 48.0
offset_right = 274.0
offset_bottom = 76.0

[node name="Button" type="Button" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 386.0
offset_top = 54.0
offset_right = 438.0
offset_bottom = 85.0
theme = ExtResource("8_gwou0")
text = "OK"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 372.0
offset_top = -8.0
offset_right = 480.0
offset_bottom = 100.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
icon = ExtResource("10_l53qb")
flat = true
icon_alignment = 1

[connection signal="toggled" from="HBoxContainer/Hoe" to="." method="_on_hoe_toggled"]
[connection signal="toggled" from="HBoxContainer/Axe" to="." method="_on_axe_toggled"]
[connection signal="toggled" from="HBoxContainer/Pickaxe" to="." method="_on_pickaxe_toggled"]
[connection signal="toggled" from="Seeds" to="." method="_on_seeds_toggled"]
[connection signal="toggled" from="SeedContainer/Potatoes" to="." method="_on_potatoes_toggled"]
[connection signal="toggled" from="SeedContainer/Carrots" to="." method="_on_carrots_toggled"]
[connection signal="close_requested" from="AdvanceDay" to="." method="_on_advance_day_close_requested"]
[connection signal="pressed" from="AdvanceDay/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="AdvanceDay/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
